# coreware-asm-

./: 123.txt  CMakeLists.txt  Makefile  asm  asm.h  betman.cor  big_feet.cor  byte_counting.c  check_true_arg.c  find_name_comment.c  friend_find_instruction.c  ft_create_operation.c  helper_work_oper.c  instrument.c  instrument_check_arg.c  list_instruction.c  main.c  my_test.txt  one_combination_arg.c  op.c  op.h  read_asembler.c  src1.c  src2.c  src3.c  test.cor  test.s  three_combination_arg.c  two_combination_arg.c  work_with_metky.c  work_with_operations.c  write_bytes_file.c  writes_byte_file_two.c
lib/printf/: ft_fldtoa_funcs.c  ft_ftoa.c  ft_itoa_im.c  ft_itoa_uh.c  ft_itoa_uhh.c  ft_itoa_ui.c  ft_itoa_uim.c  ft_ntoa.c  ft_printf.c  ft_printf.h  helper_functions.c  ntoa_ox_modificators.c  print_char.c  print_float.c  print_floatfuncs.c  print_functions.c  print_int.c  print_oxp.c  print_string_colour.c  searchers.c  utilities.c  validators.c  zero_cases_xop.c
lib/printf/libft/: Makefile  ft_atoi.c  ft_isascii.c  ft_isdigit.c  ft_lstiter.c  (+26 more)
lib/printf1/: Makefile  author  flag_modifiers.c  float_functions.c  ft_itoa_ll.c  ft_itoa_st.c  ft_itoa_uim.c  ft_itoa_ull.c  ft_ldtoa.c  ft_printf.h  ntoa_ox_modificators.c  print_int2.c  print_ld.c  print_string.c  print_u.c  utilities2.c
my/a_test/: champ.txt  com.txt  direct_param_no_value.s  null.cor
my/my_test/: 42.txt  Asom.txt  asm  big.txt  champ.cor  champ.txt  com.txt  comment_len_2048.cor  comment_len_2049.cor  direct_param_no_value.cor  null.s  param_commas.cor  param_mt_r99.cor  param_nonexistent_label.cor
(+40 files in other folders)
